# spotify-api-collector

./: LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  testes.txt
src/: main.py
src/to_landing/: extract.py  load.py  pipeline.py  transform.py
src/to_landing/api/: __init__.py  handler_http.py
src/utils/: __init__.py  environment_loader.py
