[tool.poetry]
name = "spotify-api-collector"
version = "0.1.0"
description = ""
authors = ["Matheus Costa <matheeusferreeira@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
httpx = "^0.27.0"
pydantic = "^2.7.2"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
flake8 = "^7.0.0"
taskipy = "^1.12.2"


[tool.poetry.group.mkdocs.dependencies]
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mkdocstrings-python = "^1.10.3"
pygments = "^2.18.0"
pymdown-extensions = "^10.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.black]
line-length = 79

[tool.taskipy.tasks]
format = "black . && isort . "
lint = "poetry run flake8 --exclude=.venv"
run = "poetry run python src/main.py"
